# trellis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  EXPERIMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  trellis.code-workspace
.claude/: settings.json
.claude/agents/: bloom.md  root.md  thorn.md
.claude/commands/: review-all.md  spiral.md  status.md  test-all.md
_ivy/quests/: mm-business-model-research.md
_ivy/reports/: garden-report-2026-03-22.md  garden-report-2026-03-23-sprint4.md  garden-report-2026-03-23.md  garden-report-2026-03-27-screenshot-fix.md  garden-report-2026-03-27-sprint6.md  garden-report-2026-03-27.md  garden-report-2026-03-27b.md  sprint-current.md  status-root-2026-03-22.md  status-root-2026-03-23.md  status-root-2026-03-30-mor43.md  status-root-2026-03-30-mor49.md  status-root-2026-03-30-mor71.md  status-root-2026-03-30.md  status-thorn-2026-03-22.md
agents/ivy/: SOUL.md
docs/: security-log.md
docs/architecture/: overview.md
docs/build-log/: 2026-03-20.md  2026-03-21.md
scripts/: armando.sh  first_voice.py  install-kiosk.sh  install-service.sh  run_discord.py  run_web.py  screenshot_test.py  send_discord.py  trellis-restarter.service  trellis.service  trellis_restarter.sh
tests/: __init__.py  test_activity_store.py  test_admin_api.py  test_chat_stream.py  test_circuit_breakers.py  test_compactor.py  test_context.py  test_display_capture.py  test_embeddings.py  test_garden_api.py  test_gardener_api.py  test_heartbeat.py  test_inbox.py  test_journal.py  test_knowledge.py  test_linear_client.py  test_loop.py  test_quest.py  test_quest_api.py  test_queue.py  test_restart.py  test_router.py  test_screenshot_hand.py  test_screenshot_system.py  test_shell.py  test_soul.py  test_vault.py  test_vector_store.py
tests/core/: test_approvals.py  test_quest_events_api.py  (+3 more)
trellis/: __init__.py
(+73 files in other folders)
