[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis"
version = "0.1.0"
description = "Experimental personal agent runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Kyle Morrand", email = "kyle@morrandmore.com"},
]

dependencies = [
    "anthropic>=0.40.0",
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.50.0",
    "schedule>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
]

[tool.setuptools.packages.find]
include = ["trellis*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
